# AntiResonantSAT

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
include/arsat/: graph.hpp  metallic_means.hpp  sat_types.hpp  solver.hpp  spectral.hpp
paper/: chiral_spectral_sat.tex
python/arsat/: __init__.py  __main__.py  benchmark.py  solver.py
scripts/: break_90.py  sweep_omega_spread.py  test_chirality_patterns.py  tune_omega.py  tune_omega_v2.py
src/: bindings.cpp  graph.cpp  main.cpp  metallic_means.cpp  solver.cpp  spectral.cpp
tests/: test_solver.cpp  test_solver.py
